Complete swagger implementation
